--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
   <H1>
    Saniah Barnes 
  </H1>
-   </html>
+I am currently in 11th grade at towers high school. I was born and raised here in Stone Mountain Georgia. I enjoy doing hair and makeup for fun. I also enjoy            
+playing roblox with my brother and sister and cousins.  
+            </html>
